Merge submodule and no longer use any code from a shit project